--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@
     border-bottom-right-radius: 2px;
 }
 .minidiv .Tg7LZd { /* Search icon in search bar (when scrolling) */
-    padding-right: 0px;
+    padding-right: 0;
 }
 .Gj7ine { /* Image search thumbnail in search bar */
     border-radius: 2px;
 }
 .sbct:first-child .suggestions-inner-container { /* Border above an autocomplete word */
-    border-top: 0px;
+    border-top: 0;
 }
 .kp-blk { /* "Knowledge panel" (large right info card) */
     border-radius: 2px;
@@ -112,7 +112,7 @@ div.AEprdc.vk_c { /* Google Maps insert body */
     border-radius: 2px;
 }
 .SFllF { /* Navbar selected */
-    border-radius: 0px 2px 2px 0px;
+    border-radius: 0 2px 2px 0;
 }
 .ZqhUjb.MDgEWb { /* Top share buttons */
     border-radius: 2px;
@@ -138,13 +138,13 @@ div.AEprdc.vk_c { /* Google Maps insert body */
     border-radius: 2px;
 }
 .EhlvJf { /* Sidebar tabs */
-    border-radius: 0px 2px 2px 0px;
+    border-radius: 0 2px 2px 0;
 }
 .hyMrOd { /* 2FA wrapper */
     border-radius: 2px;
 }
 .RZBuIb .sZwd7c { /* Top progress bar corners */
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 0 0 0 0;
 }
 
 /* Google Support */
@@ -215,7 +215,7 @@ a.appbar-helpcenter-sections__link{ /* Active tab highlight corners */
     border-radius: 2px;
 }
 .a-dkl3Ye .a-U-J { /* Left sidebar folder buttons */
-    border-radius: 0px 2px 2px 0px;
+    border-radius: 0 2px 2px 0;
 }
 .a-dkl3Ye .L202Xe, .a-dkl3Ye .Onyn4c { /* Quick Access files */
     border-radius: 2px;
@@ -269,4 +269,7 @@ a.appbar-helpcenter-sections__link{ /* Active tab highlight corners */
 }
 li.xl07Ob-ibnC6b{ /* Sidebar buttons */
     border-radius: 0 2px 2px 0;
+}
+.IVT3Ae-WsjYwc-UMrnmb{ /* Dark mode box */
+    border-radius: 2px;
 }
